Renamed Genesis Sample to Visual Voyager

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
-<ruleset name="Genesis-Sample"
+<ruleset name="Visual-Voyager"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:noNamespaceSchemaLocation="vendor/squizlabs/php_codesniffer/phpcs.xsd">
 
-	<description>Custom ruleset for Genesis Sample.</description>
+	<description>Custom ruleset for Visual Voyager.</description>
 
 	<!-- For help in understanding this file: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Annotated-ruleset.xml -->
 	<!-- For help in using PHPCS: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Usage -->
@@ -72,7 +72,7 @@
 	<rule ref="WordPress.WP.I18n">
 		<properties>
 			<property name="text_domain" type="array">
-				<element value="genesis-sample"/>
+				<element value="visual-voyager"/>
 			</property>
 		</properties>
 	</rule>
