--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-	"name": "studiopress/genesis-sample",
+	"name": "hellotham/visual-voyager",
 	"type": "wordpress-theme",
-	"description": "Genesis Sample child theme for the Genesis Framework",
-	"homepage": "https://github.com/studiopress/genesis-sample",
+	"description": "Visual Voyager child theme for the Genesis Framework",
+	"homepage": "https://github.com/ChristineTham/visual-voyager",
 	"license": "GPL-2.0-or-later",
 	"authors": [
 		{
-			"name": "StudioPress",
-			"email": "support@studiopress.com"
+			"name": "HelloTham",
+			"email": "info@hellotham.com"
 		}
 	],
 	"require": {
@@ -30,7 +30,7 @@
 		"phpcbf": "phpcbf"
 	},
 	"support": {
-		"issues": "https://github.com/studiopress/genesis-sample/issues",
-		"source": "https://github.com/studiopress/genesis-sample"
+		"issues": "https://github.com/ChristineTham/visual-voyager/issues",
+		"source": "https://github.com/ChristineTham/visual-voyager"
 	}
 }
