--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "genesis-sample",
-	"description": "Development files for the Genesis Framework.",
+	"name": "visual-voyager",
+	"description": "Visual Voyager WordPress Genesis Child theme, based on Genesis Sample.",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/studiopress/genesis-sample/"
+		"url": "https://github.com/ChristineTham/visual-voyager/"
 	},
 	"license": "GPL-2.0-or-later",
 	"devDependencies": {
@@ -42,16 +42,16 @@
 		"last 2 Opera versions"
 	],
 	"theme": {
-		"name": "Genesis Sample",
-		"uri": "https://demo.studiopress.com/genesis-sample/",
-		"description": "The sample child theme for the Genesis Framework.",
-		"author": "StudioPress",
-		"authoruri": "https://www.studiopress.com/",
-		"version": "3.3.1",
+		"name": "Visual Voyager",
+		"uri": "https://visualvoyager.net/",
+		"description": "Visual Voyager WordPress Genesis Child theme, based on Genesis Sample.",
+		"author": "HelloTham",
+		"authoruri": "https://www.hellotham.com/",
+		"version": "1.0.0",
 		"tags": "one-column, two-columns, left-sidebar, right-sidebar, accessibility-ready, custom-colors, custom-logo, custom-menu, featured-images, footer-widgets, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready",
 		"license": "GPL-2.0-or-later",
 		"licenseuri": "https://www.gnu.org/licenses/gpl-2.0.html",
-		"textdomain": "genesis-sample"
+		"textdomain": "visual-voyager"
 	},
 	"dependencies": {}
 }
