--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "visual-voyager",
-	"description": "Visual Voyager WordPress Genesis Child theme, based on Genesis Sample.",
+	"name": "milennial-pink",
+	"description": "Milennial Pink WordPress Genesis Child theme, based on Genesis Sample.",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/hellotham/visual-voyager/"
@@ -42,16 +42,16 @@
 		"last 2 Opera versions"
 	],
 	"theme": {
-		"name": "Visual Voyager",
+		"name": "Milennial Pink",
 		"uri": "https://visualvoyager.net/",
-		"description": "Visual Voyager WordPress Genesis Child theme, based on Genesis Sample.",
+		"description": "Milennial Pink WordPress Genesis Child theme, based on Genesis Sample.",
 		"author": "HelloTham",
 		"authoruri": "https://www.hellotham.com/",
 		"version": "1.0.0",
 		"tags": "one-column, two-columns, left-sidebar, right-sidebar, accessibility-ready, custom-colors, custom-logo, custom-menu, featured-images, footer-widgets, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready",
 		"license": "GPL-2.0-or-later",
 		"licenseuri": "https://www.gnu.org/licenses/gpl-2.0.html",
-		"textdomain": "visual-voyager"
+		"textdomain": "milennial-pink"
 	},
 	"dependencies": {}
 }
