Implemented theme colours and fonts

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 	],
 	"theme": {
 		"name": "Milennial Pink",
-		"uri": "https://visualvoyager.net/",
+		"uri": "https://christham.net/",
 		"description": "Milennial Pink WordPress Genesis Child theme, based on Genesis Sample.",
 		"author": "HelloTham",
 		"authoruri": "https://www.hellotham.com/",
